syntax = "proto3";

package example_package;

message Request {
    string message = 1;
}

message Response {
    string message = 1;
}

service Example {
    rpc ClientRequest(Request) returns (Response) {}
    rpc ClientStream(stream Request) returns (Response) {}
    rpc ServerStream(Request) returns (stream Response) {}
    rpc BidStream(stream Request) returns (stream Response) {}
}
